--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-animatable": "^1.3.3",
+    "react-native-paper": "^5.11.0",
     "react-native-safe-area-context": "^4.7.3",
     "react-native-screens": "^3.26.0",
+    "react-native-swiper-flatlist": "^3.2.3",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
