--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.69.2",
     "react-native-animatable": "^1.3.3",
     "react-native-paper": "^5.11.0",
+    "react-native-razorpay": "^2.3.0",
     "react-native-safe-area-context": "^4.7.3",
     "react-native-screens": "^3.26.0",
     "react-native-swiper-flatlist": "^3.2.3",
