--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-community/netinfo": "^10.0.0",
     "@react-navigation/bottom-tabs": "^6.5.10",
     "@react-navigation/material-bottom-tabs": "^6.2.18",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.15",
     "axios": "^1.6.0",
+    "crypto-js": "^4.2.0",
+    "pubsub-js": "^1.9.4",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-native": "0.69.2",
     "react-native-animatable": "^1.3.3",
