--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-native": "0.69.2",
     "react-native-animatable": "^1.3.3",
+    "react-native-config": "^1.5.1",
     "react-native-paper": "^5.11.0",
     "react-native-razorpay": "^2.3.0",
     "react-native-safe-area-context": "^4.7.3",
